# Guitar-Amplifier

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  amp-config.json  tauri.conf.json
src-tauri/bindings/: EffectDto.ts  FlipEffectDto.ts  HcDistortionDto.ts
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: analyzer.rs  channels.rs  default_controls.rs  effects.rs  gain.rs  helpers.rs  latency_testing.rs  loopback.rs  mod.rs  settings.rs
src-tauri/src/commands/effect_commands/: cabinet_ir.rs  delay.rs  effects.rs  hc_distortion.rs  mod.rs  sc_distortion.rs
src-tauri/src/domain/: AmpConfigDto.rs  amp_config_dto.rs  audio_device_dto.rs  audio_processor.rs  channel.rs  channel_dto.rs  effect.rs  effect_dto.rs  mod.rs  tone_stack.rs  tone_stack_dto.rs  validation.rs
src-tauri/src/domain/dto/: algorithmic_latency_dto.rs  amp_config_dto.rs  audio_device_dto.rs  buffer_latency_dto.rs  channel_dto.rs  mod.rs  round_trip_latency_dto.rs  spectrum_contract_dto.rs  (+2 more)
src-tauri/src/infrastructure/: audio_handler.rs  mod.rs
src-tauri/src/services/: amp_config_service.rs  audio_latency_measurement_service.rs  audio_service.rs  audioservice.rs  device_service.rs  file_service.rs  gain_processor.rs  mod.rs  round_trip_latency_session.rs  round_trip_probe.rs  tone_stack_processor.rs
src-tauri/src/tests/: audio_service_integration_tests.rs  latency_measurement_tests.rs  mock.rs  mod.rs
src-tauri/tests/: loopback_integration.rs  placholder-test.rs
(+123 files in other folders)
